--- a/src/components/user/userPhotos/userPhotos.css
+++ b/src/components/user/userPhotos/userPhotos.css
@@ -48,11 +48,7 @@
     display: flex;
     justify-content: center;
 }
-.downloadAllButton{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
-}
+
 .signOutUserPhotos{
     position:absolute;
     margin-left: 80%;
@@ -115,6 +111,7 @@
 .userPhotos{
     display: flex;
     flex-direction: column;
+    
 }
 .photosLogo{
     max-width: 150px;
@@ -122,16 +119,44 @@
     margin-top: 50px;
     position: absolute;
 }
+.phoneText{
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    font-family: 'Fredoka';
+    color: #fffef4;
+    background-color: #5939fad5;
+    margin-bottom: -10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    border-radius: 5px;
+}
+.downloadAllButton{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+    align-self: center;
+}
 .descargarTodo{
     background-color:#5939fa;
     border-color: #5939fa;
     color: #fffef4;
     border-radius: 30px;
-    width: 170px; 
+    min-width: 400px; 
     margin: 6px;
     font-family: 'Fredoka';
     white-space: nowrap;
     width: fit-content;
+    display:flex;
+    justify-content: center;
+    align-items: center;
    
 }
 .descargarTodo:hover{
