--- a/src/components/user/userPhotos/userPhotos.css
+++ b/src/components/user/userPhotos/userPhotos.css
@@ -48,11 +48,7 @@
     display: flex;
     justify-content: center;
 }
-.downloadAllButton{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
-}
+
 .signOutUserPhotos{
     position:absolute;
     margin-left: 80%;
@@ -68,7 +64,6 @@
 .buttonUserExit{
     align-self: flex-end;
     border-radius: 30px;
-    font-size: 12px;
     font-weight:1200;
     font-family: 'Fredoka';
     border: 1px solid  #777878  !important;
@@ -77,11 +72,11 @@
     font-weight: bold;
     letter-spacing: 1px;
     border-radius: 30px !important;
-    
-    height: 40px;
+    font-size: 9px;
+    height: 30px;
+    width: 150px;
     margin: 10px !important;
     transition: none !important;
-    width: 100px;
     box-shadow: 0px 3px 5px 0px #989898b2 !important;
 }
 .buttonUserExit:focus{
@@ -115,6 +110,7 @@
 .userPhotos{
     display: flex;
     flex-direction: column;
+    
 }
 .photosLogo{
     max-width: 150px;
@@ -122,16 +118,52 @@
     margin-top: 50px;
     position: absolute;
 }
+.containerPCText{
+    width: 650px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+    background-color: #E6E6E6;
+    text-align: center;
+    margin-bottom: -35px;
+    padding-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    border-radius: 5px;
+}
+.PCText{
+    margin-left:15px ;
+    margin-right: 15px;
+}
+.downloadAllButton{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+    align-self: center;
+}
 .descargarTodo{
-    background-color:#5939fa;
-    border-color: #5939fa;
+    background-color:#745afb;
+    border-color: #745afb;
     color: #fffef4;
     border-radius: 30px;
-    width: 170px; 
+    min-width: 190px; 
+    font-size: 14px;
+    height: 22px;
     margin: 6px;
-    font-family: 'Fredoka';
+    font-family: 'Arimo', sans-serif;
     white-space: nowrap;
     width: fit-content;
+    display:flex;
+    justify-content: center;
+    align-items: center;
    
 }
 .descargarTodo:hover{
@@ -157,10 +189,18 @@
 }
 @media(max-width: 1150px) {
     .photosLogo{
-        display: none;
+        width: 120px;
+        margin-top: 9px
     }
 }
 @media(max-width: 750px) {
+    .photosLogo{
+        margin-left: 20px;
+    }
+    .containerPCText{
+        font-size: 12px;
+        width: 80%;
+    }
     .userPhotosTitle{
         display: flex;
         justify-content: center;
@@ -182,12 +222,14 @@
     }
 }
 @media(max-width: 420px) {
+   
+    
     .userPhotosTitle{
         display: flex;
         justify-content: center;
         font-family: 'Poppins', sans-serif;
         font-weight: bold;
-        font-size: 75%;
+        font-size: 100%;
     }
     .excursionButtons{
         display: flex;
